--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,26 +16,88 @@ const { title } = Astro.props;
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body>
+	<body class="bg-[#004FFB] text-white">
 		<slot />
 	</body>
 </html>
 <style is:global>
-	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
+	* {
+		box-sizing: border-box;
+		padding: 0;
+		margin: 0;
 	}
+
 	html {
-		font-family: system-ui, sans-serif;
-		background: #13151a;
-		background-size: 224px;
+		font-family:
+			system-ui,
+			-apple-system,
+			BlinkMacSystemFont,
+			"Segoe UI",
+			Roboto,
+			Oxygen,
+			Ubuntu,
+			Cantarell,
+			"Open Sans",
+			"Helvetica Neue",
+			sans-serif;
+	}
+
+	.download {
+		display: flex;
+		align-items: center;
+	}
+
+	.download li {
+		padding: 0 5px;
+	}
+	.download li img {
+		width: 50px;
+	}
+
+	
+	.app-image {
+		width: 300px;
+	}
+
+	.main-text {
+		display: flex;
+		flex-direction: column;
+	}
+
+	.download-btns {
+		display: flex;
+	}
+
+	.download-container {
+		background: #fff;
+		display: flex;
+		align-items: center;
+		border-radius: 10px;
+		padding: 10px 20px;
+		margin-right: 10px;
+		width: 150px;
+	}
+
+	.download-container > img {
+		width: 25px;
+		margin-right: 10px;
+	}
+
+	.download-container.apple > p {
+		color: black;
+	}
+
+	a {
+		text-decoration: none;
+	}
+	.center-nav {
+		display: flex;
+	}
+	.center-nav li {
+		padding-left: 10px;
+	}
+	.redes {
+		display: flex;
 	}
 	code {
 		font-family:
